fix(ui): set menu overflow to visible to fix scrollbar issue

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -71,6 +71,10 @@
 }
 
 /* 4. Dropdown Menu */
+#menu {
+    overflow: visible !important;
+}
+
 .dropdown {
     position: relative;
     display: inline-block;
